I fixed some style issue
after I finish with the specification, I came back to finish what left of styling the pages,
I fixed the issue of extra space on the right of the screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
-
+body, html {
+  min-width: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px !important;
+  overflow-x; hidden;
+}
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -58,7 +65,6 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
   text-align:center;
   display: flex;
@@ -66,6 +72,7 @@ nav {
 }
 nav h1 {
   margin: auto;
+  padding: 10px;
 }
 nav h1 a {
   color: #fff;
@@ -222,7 +229,7 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
+  position: fixed;
   width: 100%;
   font-size: 15px;
 }
@@ -237,7 +244,9 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 95%;
+  margin: 0 10px 0 0;
+  border-radius: 10px;
 }
 #restaurant-address {
   font-size: 30px;
@@ -253,16 +262,18 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 95%;
+  margin: 0 10px 0 0;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   justify-content: center;
   width: 100%;
+  margin-left: 30px;
 }
 #reviews-container {
-  
+  margin: 0 0 40px 30px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -273,26 +284,30 @@ nav h1 a {
 }
 #reviews-list {
   margin: 10px;
-  padding: 10px;
+  padding: 0 0 30px 40px; 
   display: flex;
   flex-wrap: wrap;
 }
 #reviews-list li {
   background-color: #fff;
-  border: 2px solid #f3f3f3;
+  border: 2px solid #666;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
-  padding: 0 20px 20px;
+  margin: 0 0 20px;
+  padding: 15px;
   position: relative;
   width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 10px;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 10px 20px 10px;
+  font-size: 20px;
 }
 #restaurant-hours td {
   color: #666;
-  font-size: 40px;
+  font-size: 20px;
 }
 
 
@@ -322,32 +337,45 @@ nav h1 a {
   #restaurants-list li a {
     font-size: 20px;
   }
+  #reviews-list li p {
+    font-size: 20px;
+  }
 
 }
 
 /*for the iPad*/
 @media screen and (min-width: 768px) {
   #restaurants-list li{
-    width: 40%;
+    width: 35%;
   }
   header nav h1 a {
     font-size: 30px;
   }
   #restaurants-list li h3 {
-    font-size: 40px;
+    font-size: 30px;
   }
   #restaurants-list li p {
     font-size: 20px;
   }
   #restaurants-list li a {
+    font-size: 20px;
+  }
+  #restaurant-hours td{
+      font-size: 30px;
+  }
+  #reviews-list li p {
     font-size: 30px;
   }
 }
-
+@media screen and (min-width: 900px) {
+  #restaurants-list li{
+    width: 22%;
+  }
+}
 /*for the Desktop*/
 @media screen and (min-width: 1200px) {
   #restaurants-list li{
-    width: 25%;
+    width: 15%;
   }
   #restaurants-list li h3 {
     font-size: 1.7em;
@@ -355,10 +383,21 @@ nav h1 a {
   #restaurants-list li p {
     font-size: 1.2em;
   }
-  .container {
-    width: 1200px;
+  #restaurants-list li a {
+    font-size: 15px;
+  }
+  #maincontent, header, footer {
+    width: auto;
     margin-left: auto;
     margin-right: auto;
+  }
+  /* ========== restaurant details ========= */
+
+  #restaurant-hours td{
+      font-size: 20px;
+  }
+  #reviews-list li p {
+    font-size: 20px;
   }
 
 }
